[package]
name = "fzrom"
version = "0.1.0"
authors = ["Jamie Bainbridge <jamie.bainbridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.*"
crc = "1.8.*"

[lib]
name = "fzrom"
path = "src/lib/lib.rs"

[[bin]]
name = "fzdec"
path = "src/bin/fzdec.rs"

